@@ -14,7 +14,9 @@
 		<setting id="timeout" type="slider" label="30226" default="30" range="10,10,120" option="int"/>
 		<setting id="keep_subs" label="30004" type="bool" default="false"/>
 		<setting id="keep_zips" label="30006" type="bool" default="false"/>
-		<setting id="output_folder" label="30005" type="folder" default="special://profile/addon_data/service.subtitles.subtitles.gr/saved/" visible="eq(-2,true) | eq(-1,true)" option="writeable" source="auto" />
+		<setting id="extract" label="30012" type="bool" default="true" visible="eq(-1,true) + eq(-2,true)"/>
+		<setting id="destination" type="select" label="30009" lvalues="30010|30011" default="1" visible="eq(-3,true)"/>
+		<setting id="output_folder" label="30005" type="folder" default="special://profile/addon_data/service.subtitles.subtitles.gr/saved/" visible="eq(-4,true) | eq(-3,true)" option="writeable" source="auto" />
 	</category>
 	<category label="30211">
 		<setting type="lsep" label="xsubs.tv" />
@@ -23,5 +25,6 @@
 	</category>
 	<category label="30216">
 		<setting visible="true" label="30217" type="action" action="RunScript(special://home/addons/service.subtitles.subtitles.gr/resources/lib/clear_cache.py)"/>
+<!--		<setting visible="true" label="30217" type="action" action="RunScript(special://home/addons/service.subtitles.subtitles.gr/resources/lib/clear_cache.py)"/>-->
 	</category>
 </settings>
